--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<title>Raghav Agarwal | Portfolio</title>
 	</head>
 	<body>
+        <div id="particles-js"></div>
 		<!-- header -->
 		<header class="l-header">
 			<nav class="nav bd-grid">
@@ -462,9 +463,10 @@
 
 		<!-- SCROLL REVEAL -->
 		<!-- <script src="https://unpkg.com/scrollreveal"></script> -->
-		<script src="https://cdn.jsdelivr.net/npm/scrollreveal@4.0.9/dist/scrollreveal.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/scrollreveal@4.0.9/dist/scrollreveal.min.js"></script>
 
 		<!-- MAIN JS -->
 		<script src="assets/js/main.js"></script>
+        <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 	</body>
 </html>
