--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 
 		<link rel="stylesheet" href="assets/css/styles.css" />
 		<link rel="icon" type="image/png" href="assets/img/favicon-96x96.png" sizes="96x96" />
+		<link rel="icon" type="image/svg+xml" href="assets/img/favicon.svg" />
+		<link rel="shortcut icon" href="assets/img/favicon.ico" />
+		<link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png" />
+		<link rel="manifest" href="assets/img/site.webmanifest" />
 
 		<!-- box icons -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
@@ -13,7 +17,7 @@
 		<title>Raghav Agarwal | Portfolio</title>
 	</head>
 	<body>
-        <div id="particles-js"></div>
+		<div id="particles-js"></div>
 		<!-- header -->
 		<header class="l-header">
 			<nav class="nav bd-grid">
@@ -40,7 +44,8 @@
 
 		<main class="l-main">
 			<!-- home -->
-			<section class="home bd-grid" id="home">
+			<section class="home bd-grid parallax-section" id="home" data-speed="0.5">
+				<div class="parallax-bg"></div>
 				<div class="home__data">
 					<h1 class="home__title">Hi,<br />I'am <span class="home__title-color">Raghav</span><br /></h1>
 					<p class="home__description">
@@ -80,12 +85,37 @@
 			</section>
 
 			<!-- ABOUT -->
-			<section class="about section" id="about">
+			<section class="about section parallax-section" id="about" data-speed="0.3">
+				<div class="parallax-bg"></div>
 				<h2 class="section-title">About</h2>
 
 				<div class="about__container bd-grid">
 					<div class="about__img">
-						<img src="assets/img/about.jpg" alt="" />
+						<svg
+							class="about__blob"
+							viewBox="0 0 479 467"
+							xmlns="http://www.w3.org/2000/svg"
+							style="width: 350px; height: 350px"
+						>
+							<!-- Blob shape -->
+							<path
+								fill="#4070F4"
+								d="M9.19024 145.964C34.0253 76.5814 114.865 54.7299 184.111 29.4823C245.804 6.98884 311.86 -14.9503 370.735 14.143C431.207 44.026 467.948 107.508 477.191 174.311C485.897 237.229 454.931 294.377 416.506 344.954C373.74 401.245 326.068 462.801 255.442 466.189C179.416 469.835 111.552 422.137 65.1576 361.805C17.4835 299.81 -17.1617 219.583 9.19024 145.964Z"
+							/>
+
+							<!-- Left eye (white background) -->
+							<circle cx="180" cy="200" r="30" fill="white" />
+							<!-- Left eye pupil -->
+							<circle id="leftPupil" cx="180" cy="200" r="15" fill="black" />
+
+							<!-- Right eye (white background) -->
+							<circle cx="280" cy="200" r="30" fill="white" />
+							<!-- Right eye pupil -->
+							<circle id="rightPupil" cx="280" cy="200" r="15" fill="black" />
+
+							<!-- Smile -->
+							<path d="M200 270 Q230 300 260 270" stroke="white" stroke-width="5" fill="none" />
+						</svg>
 					</div>
 
 					<div>
@@ -101,10 +131,10 @@
 							redefine digital transformation.
 						</p>
 						<p class="about__text">
-							Outside of tech, I’m an avid cyclist, and traveler, always seeking new challenges on and off the trail.
+							Outside of tech, I'm an avid cyclist, and traveler, always seeking new challenges on and off the trail.
 						</p>
 						<p class="about__text">
-							Let’s connect and collaborate on cutting-edge AI cloud solutions that shape the future! 🚀
+							Let's connect and collaborate on cutting-edge AI cloud solutions that shape the future! 🚀
 						</p>
 					</div>
 				</div>
@@ -112,7 +142,7 @@
 
 			<!-- SKILLS -->
 			<section class="skills section" id="skills">
-				<h2 class="section-title">Skills</h2>
+				<h2 class="section-title typing-text">Skills</h2>
 
 				<div class="skills__container bd-grid">
 					<div>
@@ -259,21 +289,17 @@
 				<h2 class="section-title">Work</h2>
 
 				<div class="work__container">
-                    <!-- Algovista -->
-                    <div class="work__card">
+					<!-- Algovista -->
+					<div class="work__card">
 						<img src="assets/img/algovista.png" alt="AlgoVista Image" class="work__image" />
 						<div class="work__content">
 							<h3 class="work__title">AlgoVista</h3>
 							<p class="work__description">
-                                AlgoVista is a Web Application to Visualize Pathfinding & Sorting Algorithms and Data Structures.
+								AlgoVista is a Web Application to Visualize Pathfinding & Sorting Algorithms and Data Structures.
 							</p>
 							<div class="work__btn-container">
-								<a href="https://github.com/git-raghav/AlgoVista.git" class="work__btn" target="_blank"
-									>Visit GitHub</a
-								>
-								<a href="https://git-raghav.github.io/AlgoVista/" class="work__btn" target="_blank"
-									>Live Demo</a
-								>
+								<a href="https://github.com/git-raghav/AlgoVista.git" class="work__btn" target="_blank">Visit GitHub</a>
+								<a href="https://git-raghav.github.io/AlgoVista/" class="work__btn" target="_blank">Live Demo</a>
 							</div>
 						</div>
 					</div>
@@ -285,6 +311,24 @@
 							<h3 class="work__title">My Docker Dockyard</h3>
 							<p class="work__description">A collection of containerized experiments, mastering Docker for scalability.</p>
 							<a href="https://github.com/git-raghav/My-Docker-Dockyard" class="work__btn" target="_blank">Visit GitHub</a>
+						</div>
+					</div>
+
+                    <div class="work__card">
+						<img src="assets/img/BC.png" alt="Binary Classification Web App" class="work__image" />
+						<div class="work__content">
+							<h3 class="work__title">Decipher AI</h3>
+							<p class="work__description">
+								A Machine Learning Web Application built with Streamlit where users can Train, Test & Monitor their own ML Models.
+							</p>
+							<div class="work__btn-container">
+								<a href="https://github.com/git-raghav/NexoraAI.git" class="work__btn" target="_blank"
+									>Visit GitHub</a
+								>
+								<a href="https://nexoraai-raghavcodes.streamlit.app/" class="work__btn" target="_blank"
+									>Live Demo</a
+								>
+							</div>
 						</div>
 					</div>
 
@@ -300,9 +344,7 @@
 								<a href="https://github.com/git-raghav/Streamlit-Dashboard.git" class="work__btn" target="_blank"
 									>Visit GitHub</a
 								>
-								<a href="https://app-dashboard-raghavcodes.streamlit.app/" class="work__btn" target="_blank"
-									>Live Demo</a
-								>
+								<a href="https://app-dashboard-raghavcodes.streamlit.app/" class="work__btn" target="_blank">Live Demo</a>
 							</div>
 						</div>
 					</div>
@@ -319,10 +361,7 @@
 								<a href="https://github.com/git-raghav/Titanic-Survival-Predictor.git" class="work__btn" target="_blank"
 									>Visit GitHub</a
 								>
-								<a
-									href="https://titanic-survival-predictor-raghav.streamlit.app/"
-									class="work__btn"
-									target="_blank"
+								<a href="https://titanic-survival-predictor-raghav.streamlit.app/" class="work__btn" target="_blank"
 									>Live Demo</a
 								>
 							</div>
@@ -341,10 +380,7 @@
 								<a href="https://github.com/git-raghav/Binary-Classification-App.git" class="work__btn" target="_blank"
 									>Visit GitHub</a
 								>
-								<a
-									href="https://binary-classification-app-raghavcodes.streamlit.app/"
-									class="work__btn"
-									target="_blank"
+								<a href="https://binary-classification-app-raghavcodes.streamlit.app/" class="work__btn" target="_blank"
 									>Live Demo</a
 								>
 							</div>
@@ -362,12 +398,7 @@
 								<a href="https://github.com/git-raghav/Evidently-AI-Streamlit-App.git" class="work__btn" target="_blank"
 									>Visit GitHub</a
 								>
-								<a
-
-									class="work__btn"
-
-									>will fix shortly</a
-								>
+								<a class="work__btn">will fix shortly</a>
 							</div>
 						</div>
 					</div>
@@ -383,12 +414,7 @@
 								<a href="https://github.com/git-raghav/Streamlit-PostgreSQL-docked.git" class="work__btn" target="_blank"
 									>Visit GitHub</a
 								>
-								<a
-
-									class="work__btn"
-
-									>will fix shortly</a
-								>
+								<a class="work__btn">will fix shortly</a>
 							</div>
 						</div>
 					</div>
@@ -401,13 +427,8 @@
 								A highly Secure, Scalable and Efficient IDE for Collaborative Coding built on Microservices Architecture.
 							</p>
 							<div class="work__btn-container">
-								<a href="https://github.com/git-raghav/CoEdit.git" class="work__btn" target="_blank"
-									>Visit GitHub</a
-								>
-								<a
-									class="work__btn"
-									>Coming Soon</a
-								>
+								<a href="https://github.com/git-raghav/CoEdit.git" class="work__btn" target="_blank">Visit GitHub</a>
+								<a class="work__btn">Coming Soon</a>
 							</div>
 						</div>
 					</div>
@@ -417,16 +438,12 @@
 						<div class="work__content">
 							<h3 class="work__title">Lodgr</h3>
 							<p class="work__description">
-								Lodgr connects travelers with unique stays across the globe. From urban pads to cozy retreats, find, book, and enjoy effortlessly. Your next adventure starts here!
+								Lodgr connects travelers with unique stays across the globe. From urban pads to cozy retreats, find, book,
+								and enjoy effortlessly. Your next adventure starts here!
 							</p>
 							<div class="work__btn-container">
-								<a href="https://github.com/git-raghav/Lodgr.git" class="work__btn" target="_blank"
-									>Visit GitHub</a
-								>
-								<a
-									class="work__btn"
-									>Coming Soon</a
-								>
+								<a href="https://github.com/git-raghav/Lodgr.git" class="work__btn" target="_blank">Visit GitHub</a>
+								<a class="work__btn">Coming Soon</a>
 							</div>
 						</div>
 					</div>
@@ -463,10 +480,10 @@
 
 		<!-- SCROLL REVEAL -->
 		<!-- <script src="https://unpkg.com/scrollreveal"></script> -->
-        <script src="https://cdn.jsdelivr.net/npm/scrollreveal@4.0.9/dist/scrollreveal.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/scrollreveal@4.0.9/dist/scrollreveal.min.js"></script>
 
 		<!-- MAIN JS -->
 		<script src="assets/js/main.js"></script>
-        <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 	</body>
 </html>
