--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 			<!-- SKILLS -->
 			<section class="skills section" id="skills">
-				<h2 class="section-title typing-text">Skills</h2>
+				<h2 class="section-title">Skills</h2>
 
 				<div class="skills__container bd-grid">
 					<div>
