--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 							<h3 class="work__title">Lodgr</h3>
 							<p class="work__description">
 								Lodgr connects travelers with unique stays across the globe. From urban pads to cozy retreats, find, book,
-								and enjoy effortlessly. Your next adventure starts here!
+								and enjoy effortlessly.
 							</p>
 							<div class="work__btn-container">
 								<a href="https://github.com/git-raghav/Lodgr.git" class="work__btn" target="_blank">Visit GitHub</a>
