--- a/index.html
+++ b/index.html
@@ -322,10 +322,10 @@
 								A Machine Learning Web Application built with Streamlit where users can Train, Test & Monitor their own ML Models.
 							</p>
 							<div class="work__btn-container">
-								<a href="https://github.com/git-raghav/NexoraAI.git" class="work__btn" target="_blank"
+								<a href="https://github.com/git-raghav/Decipher.git" class="work__btn" target="_blank"
 									>Visit GitHub</a
 								>
-								<a href="https://nexoraai-raghavcodes.streamlit.app/" class="work__btn" target="_blank"
+								<a href="https://decipher-project.streamlit.app/" class="work__btn" target="_blank"
 									>Live Demo</a
 								>
 							</div>
@@ -398,23 +398,9 @@
 								<a href="https://github.com/git-raghav/Evidently-AI-Streamlit-App.git" class="work__btn" target="_blank"
 									>Visit GitHub</a
 								>
-								<a class="work__btn">will fix shortly</a>
-							</div>
-						</div>
-					</div>
-
-					<div class="work__card">
-						<img src="assets/img/postgress.png" alt="Streamlit app" class="work__image" />
-						<div class="work__content">
-							<h3 class="work__title">Streamlit with Postgress</h3>
-							<p class="work__description">
-								Streamlit app connected to PostgreSQL. The app fetches data from the database and displays it in a table.
-							</p>
-							<div class="work__btn-container">
-								<a href="https://github.com/git-raghav/Streamlit-PostgreSQL-docked.git" class="work__btn" target="_blank"
-									>Visit GitHub</a
+								<a href="https://evidently-ai-app-app-gh4wurztj8zvnogdath5uo.streamlit.app/" class="work__btn" target="_blank"
+									>Live Demo</a
 								>
-								<a class="work__btn">will fix shortly</a>
 							</div>
 						</div>
 					</div>
