--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 					</div>
 
                     <div class="work__card">
-						<img src="assets/img/BC.png" alt="Binary Classification Web App" class="work__image" />
+						<img src="assets/img/decipher.png" alt="Binary Classification Web App" class="work__image" />
 						<div class="work__content">
 							<h3 class="work__title">Decipher AI</h3>
 							<p class="work__description">
