updated work and resume

--- a/index.html
+++ b/index.html
@@ -289,6 +289,20 @@
 				<h2 class="section-title">Work</h2>
 
 				<div class="work__container">
+                    <!-- Lodgr -->
+                    <div class="work__card">
+						<img src="assets/img/lodgr.png" alt="Lodgr Web App" class="work__image" />
+						<div class="work__content">
+							<h3 class="work__title">Lodgr</h3>
+							<p class="work__description">
+								Go-to platform for finding unique, hassle-free stays around the world. Find, book, and enjoy effortlessly.
+							</p>
+							<div class="work__btn-container">
+								<a href="https://github.com/git-raghav/Lodgr.git" class="work__btn" target="_blank">Visit GitHub</a>
+								<a href="https://lodgr-stays.onrender.com/" class="work__btn" target="_blank">Live Demo</a>
+							</div>
+						</div>
+					</div>
 					<!-- Algovista -->
 					<div class="work__card">
 						<img src="assets/img/algovista.png" alt="AlgoVista Image" class="work__image" />
@@ -300,6 +314,35 @@
 							<div class="work__btn-container">
 								<a href="https://github.com/git-raghav/AlgoVista.git" class="work__btn" target="_blank">Visit GitHub</a>
 								<a href="https://git-raghav.github.io/AlgoVista/" class="work__btn" target="_blank">Live Demo</a>
+							</div>
+						</div>
+					</div>
+
+					<!-- Gridplus -->
+					<div class="work__card">
+						<img src="assets/img/gridplus.png" alt="Gridplus Image" class="work__image" />
+						<div class="work__content">
+							<h3 class="work__title">GridPlus</h3>
+							<p class="work__description">
+								IBM Internship Project. GridPlus is a Cloud-based Smart Grid Solution for real-time monitoring, alerting, and management of electrical meters in industrial environments.
+							</p>
+							<div class="work__btn-container">
+								<a href="https://github.com/git-raghav/GridPlus.git" class="work__btn" target="_blank">Visit GitHub</a>
+								<a href="http://54.166.141.1:3000/" class="work__btn" target="_blank">Live Demo</a>
+							</div>
+						</div>
+					</div>
+
+                    <div class="work__card">
+						<img src="assets/img/image.png" alt="CoEdit Web App" class="work__image" />
+						<div class="work__content">
+							<h3 class="work__title">CoEdit</h3>
+							<p class="work__description">
+								Collaborative IDE built on Microservice Architecture. Uses WebSockets, Containers & Distributed Database.
+							</p>
+							<div class="work__btn-container">
+								<a href="https://github.com/git-raghav/CoEdit.git" class="work__btn" target="_blank">Visit GitHub</a>
+								<a class="work__btn">Coming Soon</a>
 							</div>
 						</div>
 					</div>
@@ -332,107 +375,6 @@
 						</div>
 					</div>
 
-					<!-- Streamlit Dashboard Card -->
-					<div class="work__card">
-						<img src="assets/img/dashboard.png" alt="Streamlit Dashboard" class="work__image" />
-						<div class="work__content">
-							<h3 class="work__title">Streamlit Dashboard</h3>
-							<p class="work__description">
-								This interactive Streamlit web app provides a seamless experience for data exploration and visualization.
-							</p>
-							<div class="work__btn-container">
-								<a href="https://github.com/git-raghav/Streamlit-Dashboard.git" class="work__btn" target="_blank"
-									>Visit GitHub</a
-								>
-								<a href="https://app-dashboard-raghavcodes.streamlit.app/" class="work__btn" target="_blank">Live Demo</a>
-							</div>
-						</div>
-					</div>
-
-					<!-- Titanic Survival Prediction Card -->
-					<div class="work__card">
-						<img src="assets/img/titanic.png" alt="Titanic Survival Prediction" class="work__image" />
-						<div class="work__content">
-							<h3 class="work__title">Titanic Survival Prediction</h3>
-							<p class="work__description">
-								A machine learning model predicting survival chances on the Titanic using Python and scikit-learn.
-							</p>
-							<div class="work__btn-container">
-								<a href="https://github.com/git-raghav/Titanic-Survival-Predictor.git" class="work__btn" target="_blank"
-									>Visit GitHub</a
-								>
-								<a href="https://titanic-survival-predictor-raghav.streamlit.app/" class="work__btn" target="_blank"
-									>Live Demo</a
-								>
-							</div>
-						</div>
-					</div>
-
-					<!-- Binary Classification WebApp Card -->
-					<div class="work__card">
-						<img src="assets/img/BC.png" alt="Binary Classification Web App" class="work__image" />
-						<div class="work__content">
-							<h3 class="work__title">Binary Classification Web App</h3>
-							<p class="work__description">
-								A machine learning web application built with Streamlit to classify mushrooms as edible or poisonous.
-							</p>
-							<div class="work__btn-container">
-								<a href="https://github.com/git-raghav/Binary-Classification-App.git" class="work__btn" target="_blank"
-									>Visit GitHub</a
-								>
-								<a href="https://binary-classification-app-raghavcodes.streamlit.app/" class="work__btn" target="_blank"
-									>Live Demo</a
-								>
-							</div>
-						</div>
-					</div>
-
-					<div class="work__card">
-						<img src="assets/img/evidently.png" alt="Evidently AI Web App" class="work__image" />
-						<div class="work__content">
-							<h3 class="work__title">Evidently AI Web App</h3>
-							<p class="work__description">
-								Uses Evidently AI for monitoring machine learning models. Provides an interactive dashboard in Streamlit.
-							</p>
-							<div class="work__btn-container">
-								<a href="https://github.com/git-raghav/Evidently-AI-Streamlit-App.git" class="work__btn" target="_blank"
-									>Visit GitHub</a
-								>
-								<a href="https://evidently-ai-app-app-gh4wurztj8zvnogdath5uo.streamlit.app/" class="work__btn" target="_blank"
-									>Live Demo</a
-								>
-							</div>
-						</div>
-					</div>
-
-					<div class="work__card">
-						<img src="assets/img/coedit.jpg" alt="CoEdit Web App" class="work__image" />
-						<div class="work__content">
-							<h3 class="work__title">CoEdit</h3>
-							<p class="work__description">
-								A highly Secure, Scalable and Efficient IDE for Collaborative Coding built on Microservices Architecture.
-							</p>
-							<div class="work__btn-container">
-								<a href="https://github.com/git-raghav/CoEdit.git" class="work__btn" target="_blank">Visit GitHub</a>
-								<a class="work__btn">Coming Soon</a>
-							</div>
-						</div>
-					</div>
-
-					<div class="work__card">
-						<img src="assets/img/lodgr.jpg" alt="Lodgr Web App" class="work__image" />
-						<div class="work__content">
-							<h3 class="work__title">Lodgr</h3>
-							<p class="work__description">
-								Lodgr connects travelers with unique stays across the globe. From urban pads to cozy retreats, find, book,
-								and enjoy effortlessly.
-							</p>
-							<div class="work__btn-container">
-								<a href="https://github.com/git-raghav/Lodgr.git" class="work__btn" target="_blank">Visit GitHub</a>
-								<a class="work__btn">Coming Soon</a>
-							</div>
-						</div>
-					</div>
 				</div>
 			</section>
 
